--- a/style.css
+++ b/style.css
@@ -1,1 +1,73 @@
+* {
 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    text-decoration: none;
+}
+
+body {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    background: grey;
+}
+
+main {
+    display: flex;
+    height:100%;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+  
+}
+
+.porco {
+    flex: 8;
+    height: 100%;
+}
+
+.sidebar {
+     display: flex;
+     flex-direction: column;
+     flex: 1;
+     height: 100%;
+     background: rgb(226, 226, 226);
+ }
+
+ .sidebar> div{
+    background-color: #f1f1f1;
+    width: 50px;
+    margin: 50px;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+  }
+
+ form {
+     background-color: rgb(255, 255, 255);
+     width: 100%;
+     height: 20%;
+ }
+
+input{
+   margin-top:  8rem; 
+   margin-left: 2rem;
+   padding-left: 50px;
+ }
+
+ form::after {
+    display: block;
+    content:"" ;
+    position: relative;
+    top: 50%;
+     width: 100%;
+     height: 3px;
+     background-color: black;
+ }
+
+.conttre{
+    height:100%;
+    flex: 2;
+    background-color: rgb(156, 156, 156);
+}
